# 3d-curves

./: .gitignore  CMakeLists.txt  README.md  main.cpp
3d-curves/: CMakeLists.txt  circle.cpp  circle.h  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h
